fix: correcting tests