@@ -17,10 +17,8 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
@@ -112,7 +110,8 @@ class ProjectIntegrationTest {
                 loginRequest,
                 LoginResponse.class
             );
-        authToken = loginResponse.getBody().token();
+        Assertions.assertNotNull(loginResponse.getBody());
+        authToken = loginResponse.getBody().accessToken();
     }
 
     @AfterEach
@@ -359,7 +358,7 @@ class ProjectIntegrationTest {
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody()).hasSize(1);
-        assertThat(response.getBody().get(0).userId()).isEqualTo(userId);
+        assertThat(response.getBody().getFirst().userId()).isEqualTo(userId);
     }
 
     @Test
